<resources>
    <string name="app_name">Hoop !!</string>
    <string name="chat_tab">Sohbetler</string>
    <string name="status_tab">Durum</string>
    <string name="call_tab">Aramalar</string>
    <string name="new_group">Yeni Grup</string>
    <string name="new_bulk_messages">Yeni Toplu Mesaj</string>
    <string name="web">Hoop Web</string>
    <string name="starred_messages">Yıldızlı Mesajlar</string>
    <string name="settings">Ayarlar</string>
    <string name="search">Ara</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
