<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <item
            android:id="@+id/search"
            android:title="@string/search"
            android:orderInCategory="100"
            android:icon="@drawable/ic_search_white_24dp"
            app:showAsAction="ifRoom"

    />
    <item
            android:id="@+id/new_group"
            android:title="@string/new_group"
            android:orderInCategory="100"
            app:showAsAction="never"

    />
    <item
            android:id="@+id/new_bulk_message"
            android:title="@string/new_bulk_messages"
            android:orderInCategory="100"
            app:showAsAction="never"

    />
    <item
            android:id="@+id/web"
            android:title="@string/web"
            android:orderInCategory="100"
            app:showAsAction="never"

    />

    <item
            android:id="@+id/starred_messages"
            android:title="@string/starred_messages"
            android:orderInCategory="100"
            app:showAsAction="never"

    />
    <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:orderInCategory="100"
            app:showAsAction="never"

    />


</menu>