<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root_of_tabs"
              android:layout_width="match_parent"
              android:layout_height="@dimen/taps_height"
              android:background="@color/colorPrimary"
              android:orientation="horizontal"
              android:padding="@dimen/taps_padding"
              android:weightSum="9">

    <ImageButton
            android:id="@+id/camera_tab"
            style="@style/tab"
            android:layout_weight="1"
            android:src="@drawable/ic_photo_camera_24dp"/>

    <Button
            android:id="@+id/chats_tab"
            style="@style/tab"
            android:layout_weight="3"
            android:text="@string/chat_tab"
            android:textColor="@color/colorAccent"/>

    <Button
            android:id="@+id/status_tab"
            style="@style/tab"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:text="@string/status_tab"/>

    <Button
            android:id="@+id/call_tab"
            style="@style/tab"
            android:layout_weight="3"
            android:background="@color/colorPrimary"
            android:text="@string/call_tab"/>

</LinearLayout>


