<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.MainActivity"
        android:id="@+id/root">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorAccent"
            app:subtitleTextColor="@color/colorAccent"
            android:padding="1dp"></androidx.appcompat.widget.Toolbar>
    <LinearLayout
            android:id="@+id/root_of_tabs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/taps_height"
            android:padding="@dimen/taps_padding"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:weightSum="9">

        <ImageButton
                android:id="@+id/camera_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_photo_camera_24dp"
                android:padding="@dimen/taps_padding"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
        />

        <Button
                android:id="@+id/chats_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="@dimen/taps_padding"
                android:text="@string/chat_tab"
                android:textColor="@color/colorAccent"
                android:layout_margin="@dimen/taps_padding"
                android:layout_weight="3"
                android:background="@color/colorPrimary"
        />
        <Button
                android:id="@+id/status_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="@dimen/taps_padding"
                android:text="@string/status_tab"
                android:textColor="@color/colorAccent"
                android:layout_margin="@dimen/taps_padding"
                android:layout_weight="2"
                android:background="@color/colorPrimary"
        />
        <Button
                android:id="@+id/call_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="@dimen/taps_padding"
                android:text="@string/call_tab"
                android:textColor="@color/colorAccent"
                android:layout_margin="@dimen/taps_padding"
                android:layout_weight="3"
                android:background="@color/colorPrimary"
        />

    </LinearLayout>
    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    />

</LinearLayout>